// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Badge > Variantes > snapshot: variante default 1`] = `
<div>
  <span
    class="inline-flex items-center justify-center font-medium transition-colors rounded-full bg-zinc-700 text-text-zinc-200 hover:bg-zinc-600 px-3 py-1 text-sm"
  >
    Default
  </span>
</div>
`;

exports[`Badge > Variantes > snapshot: variante destructive 1`] = `
<div>
  <span
    class="inline-flex items-center justify-center font-medium transition-colors rounded-full bg-zinc-800-alpha-50 text-text-zinc-400 px-3 py-1 text-sm"
  >
    Destructive
  </span>
</div>
`;

exports[`Badge > Variantes > snapshot: variante outline 1`] = `
<div>
  <span
    class="inline-flex items-center justify-center font-medium transition-colors rounded-full border border-zinc-400-alpha-30 text-text-zinc-200 bg-transparent hover:bg-zinc-800-alpha-50 px-3 py-1 text-sm"
  >
    Outline
  </span>
</div>
`;

exports[`Badge > Variantes > snapshot: variante secondary 1`] = `
<div>
  <span
    class="inline-flex items-center justify-center font-medium transition-colors rounded-full bg-gradient-to-r from-accent-emerald to-accent-lime text-zinc-900 px-3 py-1 text-sm"
  >
    Secondary
  </span>
</div>
`;
